--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,20 @@
   text-align: center;
 }
 
+.sidebar {
+  height: 100% !important;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px;
+  border-radius: 0;
+  border-color: dimgray;
+  background-color: #e3e3e3;
+  z-index: 1;
+  position: fixed;
+  width: 260px;
+
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
